refactor: add csrf_refresh_token authorization to api spec
