# api/routes/auth.py
@@ -126,7 +126,10 @@ class Login(MethodView):
 class Refresh(MethodView):
     @jwt_required(refresh=True)
     @auth.output(AccessTokenSchema)
-    @auth.doc(security="jwt_refresh_token", responses={200: "Access token refreshed"})
+    @auth.doc(
+        security=["jwt_refresh_token", "csrf_refresh_token"],
+        responses={200: "Access token refreshed"},
+    )
     def post(self):
         """Refresh access token"""
         identity = get_jwt_identity()
